vogthof/vogthof-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vogthof
  namespace: vogthof
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vogthof
  template:
    metadata:
      labels:
        app: vogthof
    spec:
      containers:
      - name: vogthof
        image: ghcr.io/davidcode2/aalen-vogthof-astro:0.0.9
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
          requests:
            memory: "64Mi"
            cpu: "50m"
