vogthof/vogthof-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vogthof
  namespace: vogthof
spec:
  selector:
    app: vogthof
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
