vogthof/vogthof-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vogthof-ingress
  namespace: vogthof
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vogthof.jakob-lingel.dev
    secretName: vogthof-tls
  rules:
  - host: vogthof.jakob-lingel.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vogthof
            port:
              number: 80
